<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LemmeTravel</string>

    <!-- Navigation Drawer -->
    <string name="nav_menu1">หน้าแรก</string>
    <string name="nav_menu2">บทความของฉัน</string>
    <string name="nav_menu3">LemmeTravel</string>
    <string name="nav_menu4">LemmeTravel</string>
    <string name="nav_menu5">LemmeTravel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Tablayout Menu -->
    <string name="tab_popular">ทริปยอดนิยม</string>
    <string name="tab_new">ทริปล่าสุด</string>
    <string name="tab_recomend">แนะนำ</string>

    <!-- Activity Chapter -->
    <string name="Chapter_Menu">ตอนทั้งหมด</string>
    <string name="Event_Menu">เหตุการณ์ทั้งหมด</string>
    <string name="Author_Menu">ผู้เขียนบทความ</string>


</resources>
