<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
    <group android:checkableBehavior="single"
        >
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_action_home"
            android:title="@string/nav_menu1" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@mipmap/ic_action_home"
            android:title="@string/nav_menu2" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@mipmap/ic_action_home"
            android:title="@string/nav_menu3" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@mipmap/ic_action_home"
            android:title="@string/nav_menu4" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@mipmap/ic_action_home"
            android:title="@string/nav_menu5" />
    </group>

    <item android:title="@string/nav_menu5">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="@string/nav_menu5" />
            <item
                android:id="@+id/nav_send"
                android:title="@string/nav_menu5" />
        </menu>
    </item>
</menu>